tests/errors/tuple-struct-semicolon.ari
struct Pair(i64, bool);

fn main() -> i64 {
  return 0;
}
